--- a/src/ckanext-regx/ckanext/regx/templates/get_profiles.html
+++ b/src/ckanext-regx/ckanext/regx/templates/get_profiles.html
@@ -144,7 +144,7 @@
     {% include "side_nav.html" %}
     <div class="container">
         <div class="profile-card">
-            <h4 class="mb-4">Your Profiles</h4>
+            <h4 class="mb-4">My Profiles</h4>
             <div class="row">
                 {% if company %} <!-- Check if companies exist -->
                 {% for company in company %} <!-- Loop through companies -->
