--- a/src/ckanext-regx/ckanext/regx/templates/view_profile.html
+++ b/src/ckanext-regx/ckanext/regx/templates/view_profile.html
@@ -267,7 +267,7 @@
                                     {{ 'Active' if status else 'Inactive' }}
                                 </span>
                             </div>
-                            <div class="claimant-meta">
+                            <!-- <div class="claimant-meta">
                                 <div class="d-flex justify-content-between small text-muted mb-2">
                                     <span>Registered:</span>
                                     <span>{{ company.created }}</span>
@@ -276,7 +276,7 @@
                                     <span>Last Activity:</span>
                                     <span>2 days ago</span>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
