--- a/src/ckanext-regx/ckanext/regx/templates/search_company.html
+++ b/src/ckanext-regx/ckanext/regx/templates/search_company.html
@@ -132,8 +132,8 @@
         <div class="search-container">
             <form method="POST">
                 {{ h.csrf_input() }}
-                <input type="text" id="profile_id" name="profile_id" class="search-bar" placeholder="Enter Company Name"
-                    required>
+                <input type="text" id="company_name" name="company_name" class="search-bar"
+                    placeholder="Enter Company Name" required>
                 <button type="submit" class="search-button">Search</button>
             </form>
         </div>
